# agh

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.es.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: cd-ghcr.yml  cd-pypi.yml  ci.yml  pr-validation.yml  release.yml
agh/: __init__.py
agh/cli/: __init__.py  agent_integrations.py  collection_refs.py  config.py  global_skills.py  main.py  pack_init.py  pack_publish.py  pack_refs.py  package_init.py  package_publish.py  package_refs.py  project_refs.py  pull_markers.py  pull_plan.py  user_refs.py  workspace_pull.py  workspace_sync.py
agh/common/: __init__.py  checksums.py  ids.py  pack_manifest.py  package_limits.py  package_manifest.py  repo_url.py  validation.py
agh/server/: __init__.py  app.py  auth.py  db.py
agh/server/migrations/: 001_initial_schema.sql  003_rename_packs_to_packages.sql  005_collection_constraints.sql  006_collection_packages.sql
agh/server/routes/: collections.py  packages.py  packs.py  projects.py  users.py
assets/: agh-workspace-demo.tape
changelog.d/: +cli-auth-session.breaking.md  +cli-config-instance.breaking.md  +cli-package-assignment.breaking.md  +cli-resource-vocabulary.breaking.md  +cli-root-help.changed.md  +cli-skill-link-pull.breaking.md  +cli-target-selection.breaking.md  +scoop-windows-installer.added.md  +towncrier.added  +windows-release-assets.added.md  README.md
docs/: admin.md  installation.md  operations.md  packs.md  projects.md  quickstart.md  release-checklist.md  workspace.md
docs/assets/: agh-workspace-demo.tape
docs/es/: admin.md  installation.md  operations.md  packs.md  quickstart.md  workspace.md
openspec/: config.yaml
openspec/changes/add-scoop-windows-installer/: apply-progress.md  design.md  exploration.md  proposal.md  tasks.md  verify-report.md
openspec/changes/archive/2026-06-13-fix-cli-unknown-command-exit/: apply-progress.md  design.md  exploration.md  proposal.md  tasks.md  verify-report.md
openspec/changes/archive/2026-06-13-fix-review-findings/: apply-progress.md  design.md  exploration.md  proposal.md  tasks.md  verify-report.md
openspec/changes/archive/2026-06-14-fix-docker-runtime-hardening/: apply-progress.md  design.md  proposal.md  tasks.md  verify-report.md
openspec/changes/archive/2026-06-14-fix-git-subprocess-timeouts/: apply-progress.md  design.md  exploration.md  proposal.md  tasks.md  verify-report.md
openspec/changes/archive/2026-06-14-fix-pack-artifact-read-errors/: apply-progress.md  design.md  verify-report-pr1.md  verify-report.md
openspec/changes/archive/2026-06-14-fix-workspace-pull-atomicity/: design.md  proposal.md  tasks.md  verify-report.md
openspec/changes/archive/2026-06-15-package-nomenclature-ux/: apply-progress.md  archive-report.md  design.md  exploration.md  proposal.md  tasks.md  verify-report.md
openspec/changes/bootstrap-agent-guidance-hub/: apply-progress.md  design.md  exploration.md  proposal.md  tasks.md
openspec/changes/cli-ux-redesign/: apply-progress.md  tasks.md  verify-report.md
openspec/changes/fix-pack-artifact-read-errors/: apply-progress.md  proposal.md  tasks.md
openspec/changes/fix-workspace-pull-atomicity/: apply-progress.md  tasks.md
openspec/changes/global-skill-collections/: apply-progress.md  tasks.md  verify-report-2A.1b.md  verify-report-2A.1c.md
openspec/changes/support-name-identifiers/: apply-progress.md  future-slices.md  tasks.md
openspec/specs/cli-usage-errors/: spec.md
openspec/specs/docker-runtime-hardening/: spec.md
openspec/specs/global-skill-collections/: spec.md
openspec/specs/pack-artifact-read-errors/: spec.md
openspec/specs/package-artifact-read-errors/: spec.md
openspec/specs/workspace-git-subprocess-timeouts/: spec.md
openspec/specs/workspace-pull-atomicity/: spec.md
scripts/: install.sh  update_scoop_manifest.py
skills/agh-branch-pr/: SKILL.md
skills/agh-chained-pr/: SKILL.md
skills/agh-changelog/: SKILL.md
skills/agh-issue-flow/: SKILL.md
skills/agh-work-unit-commits/: SKILL.md
tests/: conftest.py  test_agent_command.py  test_api_errors.py  test_auth_bootstrap.py  test_cli_admin_commands.py  test_cli_help_map.py  test_cli_login.py  test_cli_pack_commands.py  test_cli_package_assignment.py  test_cli_package_commands.py  test_cli_pull.py  test_cli_skill_link_pull.py  test_cli_version.py  test_collection_package_assignments.py  test_collection_routes.py  test_common_helpers.py  test_db_migrations.py  test_docker_runtime.py  test_docs_guidance.py  test_global_skills.py  test_install_script.py  test_integration_smoke.py  test_pack_routes.py  test_package_migration.py  test_package_nomenclature.py  test_package_routes.py  test_project_pack_assignments.py  test_project_package_assignments.py  test_project_routes.py  test_pull_manifest_routes.py  test_pull_markers.py  test_pull_plan.py  test_release_workflow.py  test_scaffold.py  test_target_command.py  test_update_scoop_manifest.py  test_user_routes.py  test_workspace_pull.py  test_workspace_sync.py
(+34 files in other folders)
