[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agh"
version = "0.1.0"
description = "Agent Guidance Hub"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["fastapi>=0.110", "typer>=0.12", "uvicorn[standard]>=0.27"]

[dependency-groups]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
agh = "agh.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["agh*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
