[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agh"
dynamic = ["version"]
description = "Self-hosted guidance distribution for coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = [
  "agent-tools",
  "ai-agents",
  "cli",
  "coding-agents",
  "developer-tools",
  "fastapi",
  "self-hosted",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development",
  "Topic :: Software Development :: Build Tools",
  "Topic :: System :: Systems Administration",
]
dependencies = ["fastapi>=0.110", "typer>=0.12", "uvicorn[standard]>=0.27"]

[project.urls]
Homepage = "https://github.com/giulianotesta7/AgentGuidanceHub"
Documentation = "https://github.com/giulianotesta7/AgentGuidanceHub#readme"
Source = "https://github.com/giulianotesta7/AgentGuidanceHub"
Issues = "https://github.com/giulianotesta7/AgentGuidanceHub/issues"
Releases = "https://github.com/giulianotesta7/AgentGuidanceHub/releases"
Container = "https://github.com/giulianotesta7/AgentGuidanceHub/pkgs/container/agent-guidance-hub"

[dependency-groups]
dev = ["pytest>=8.0", "httpx2>=0.28", "towncrier>=25.8.0"]
release = ["pyinstaller>=6.0"]

[project.scripts]
agh = "agh.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["agh*"]

[tool.setuptools.package-data]
"agh.server.migrations" = ["*.sql"]

[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.towncrier]
directory = "changelog.d"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
template = "towncrier:default.md"
title_format = "## {version} - {project_date}"
issue_format = "[#{issue}](https://github.com/giulianotesta7/AgentGuidanceHub/issues/{issue})"
underlines = ["", "", ""]
ignore = ["README.md"]

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking Changes"
showcontent = true

[[tool.towncrier.type]]
directory = "docs"
name = "Documentation"
showcontent = true

[tool.pytest.ini_options]
testpaths = ["tests"]
